; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_btpbuf.c_btpbuf_clen.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_btpbuf.c_btpbuf_clen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pbuf = type { %struct.pbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @btpbuf_clen(%struct.pbuf* %0) #0 {
  %2 = alloca %struct.pbuf*, align 8
  %3 = alloca i64, align 8
  store %struct.pbuf* %0, %struct.pbuf** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.pbuf*, %struct.pbuf** %2, align 8
  %6 = icmp ne %struct.pbuf* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %4
  %8 = load i64, i64* %3, align 8
  %9 = add nsw i64 %8, 1
  store i64 %9, i64* %3, align 8
  %10 = load %struct.pbuf*, %struct.pbuf** %2, align 8
  %11 = getelementptr inbounds %struct.pbuf, %struct.pbuf* %10, i32 0, i32 0
  %12 = load %struct.pbuf*, %struct.pbuf** %11, align 8
  store %struct.pbuf* %12, %struct.pbuf** %2, align 8
  br label %4

13:                                               ; preds = %4
  %14 = load i64, i64* %3, align 8
  ret i64 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
